Tue Feb 27 11:34:22 GMT 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Remove the old throw for
	  DatabaseOpeningError so the new throw for DatabaseModifiedError will
	  actually be used.

Tue Feb 27 09:22:52 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* flint_table.cc,flint_table.h,flint_database.cc: If a database is
	  being frequently modified (ie, transactions committed extremely
	  frequently), flint can fail open all the tables at a consistent
	  revision on the first attempt.  The code to handle this in
	  flint_database.cc was not firing because flint_table.cc was
	  reporting all failures to open a table for reading by throwing an
	  exception.  This commit changes flint_table.cc to report failure
	  to open at a specific revision by returning false.

	  In addition, there was a bug in flint_database.cc which caused
	  the attempts to re-try opening a database in this situation to
	  fail.  This is now fixed.

	  Finally, flint_database.cc now throws a DatabaseModified error if
	  100 attempts to reopen the database fail because of continual
	  modifications - previously, it would have thrown a
	  DatabaseOpening error.

	  There is no easy regression test - but my "loadtest.cc" program
	  attached to bug #108 shows the problem (if you comment out the
	  code which ignores DatabaseOpeningErrors).

Tue Feb 27 01:25:00 GMT 2007  Olly Betts <olly@survex.com>

	* docs/doxygen_api_conf.in,docs/doxygen_full_conf.in: Need to
	  define DOXYGEN so that the previous change to the generated
	  errordispatch.h works.  Remove obsolete macros from
	  EXPAND_AS_DEFINED and PREDEFINED.
	* docs/doxygen_full_conf.in: Increase MAX_DOT_GRAPH_WIDTH from
	  800 to 1024 to match doxygen_api_conf.in.

Tue Feb 27 00:41:47 GMT 2007  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix warning with SGI's CC.

Tue Feb 27 00:35:06 GMT 2007  Olly Betts <olly@survex.com>

	* generate-exceptions.in: Wrap errordispatch.h in "#ifndef DOXYGEN"