@@ -419,7 +419,8 @@ BackendManager::getdb_remote(const vector<string> &dbnames)
 #endif
 #ifdef HAVE_VALGRIND
     if (RUNNING_ON_VALGRIND) {
-	return Xapian::Remote::open("./runtest ../bin/xapian-progsrv", args);
+	args.insert(0, "../bin/xapian-progsrv ");
+	return Xapian::Remote::open("./runtest", args);
     }
 #endif
     return Xapian::Remote::open("../bin/xapian-progsrv", args);
@@ -443,7 +444,8 @@ BackendManager::getwritedb_remote(const vector<string> &dbnames)
 #endif
 #ifdef HAVE_VALGRIND
     if (RUNNING_ON_VALGRIND) {
-	return Xapian::Remote::open_writable("./runtest ../bin/xapian-progsrv", args);
+	args.insert(0, "../bin/xapian-progsrv ");
+	return Xapian::Remote::open_writable("./runtest", args);
     }
 #endif
     return Xapian::Remote::open_writable("../bin/xapian-progsrv", args);
